Agregado favicon, actualizados url de routerlink, estilos formateados.

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -11,25 +11,21 @@
             <h5>Sección</h5>
             <ul class="nav flex-column">
                 <li class="nav-item mb-2"><a href="/index.html" class="nav-link p-0 text-body-secondary">Inicio</a></li>
-                <li class="nav-item mb-2"><a href="#" routerLink="/menus" class="nav-link p-0 text-body-secondary">Todos los menús.</a></li>
-                <li class="nav-item mb-2"><a href="#" routerLink="/restaurant-list" class="nav-link p-0 text-body-secondary">Restaurantes.</a></li>
-                <li class="nav-item mb-2"><a href="#" routerLink="/platos" class="nav-link p-0 text-body-secondary">Encuentra inspiración</a></li>
+                <li class="nav-item mb-2"><a href="#" routerLink="projects-list"
+                        class="nav-link p-0 text-body-secondary">Cursos realizados</a></li>
+                <li class="nav-item mb-2"><a href="#contacto" 
+                        class="nav-link p-0 text-body-secondary">Contactame</a></li>
+                <li class="nav-item mb-2"><a href="#" routerLink="/platos"
+                        class="nav-link p-0 text-body-secondary">Encuentra inspiración</a></li>
             </ul>
         </div>
-        
-        <div class="col-6 col-md-2">
-            <h5>Categorias</h5>
-            <ul class="nav flex-column">
-                <li class="nav-item mb-2"><a href="#" routerLink="/discounts" class="nav-link p-0 text-body-secondary">Descuentos</a></li>
-                <li class="nav-item mb-2"><a href="#" routerLink="/zonas" class="nav-link p-0 text-body-secondary">Ciudades</a></li>
-                <li class="nav-item mb-2"><a href="#" routerLink="/ranking" class="nav-link p-0 text-body-secondary">Ranking</a></li>
-            </ul>
-        </div> 
+
+
 
         <div class="col-md-4 mb-3 text-center">
             <form>
                 <h5>Subscríbete al Newsletter Tech chef.</h5>
-                <p>Recibe nuestras ofertas mensuales.</p>
+                <p>Proximamente recibiras las noticias mas actuales directamente en tu correo.</p>
                 <div class="d-flex flex-column flex-sm-row w-100 gap-2">
                     <label for="newsletter1" class="visually-hidden">Email address</label>
                     <input id="newsletter1" type="text" class="form-control" placeholder="Email address">
@@ -41,18 +37,18 @@
         <div class="col text-center">
             <ul class="list-unstyled d-flex justify-content-center align-items-center">
                 <li class="ms-3">
-                    <a class="link-body-emphasis" href="#">
-                        <i class="bi bi-facebook fs-1"></i>
+                    <a class="link-body-emphasis" href="">
+                        <i class="bi bi-github fs-1"></i>
                     </a>
                 </li>
                 <li class="ms-3">
-                    <a class="link-body-emphasis" href="#">
+                    <a class="link-body-emphasis" href="https://www.instagram.com/jehiell">
                         <i class="bi bi-instagram fs-1"></i>
                     </a>
                 </li>
                 <li class="ms-3">
-                    <a class="link-body-emphasis" href="#">
-                        <i class="bi bi-threads fs-1"></i>
+                    <a class="link-body-emphasis" href="https://www.linkedin.com/in/jehiel-linarez/">
+                        <i class="bi bi bi-linkedin fs-1"></i>
                     </a>
                 </li>
             </ul>
@@ -60,7 +56,6 @@
     </div>
 </footer>
 <style>
-  
     .flex {
         display: flex;
         flex-wrap: wrap;
