--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,19 +17,27 @@
                         </h2>
                         <h3>Desarrollador web</h3>
                         <p data-aos="fade-up" data-aos-delay="200">Me dedico al desarrollo de aplicaciones web, en este
-                            portfolio podras encontrar de manera mas detallada, mis proyectos, estudios, futuros
+                            portfolio podrás encontrar de manera mas detallada, mis proyectos, estudios, futuros
                             emprendimientos y probablemente encontraras mas de una manera de comunciarte conmigo, me
                             encuentro sumergido en mis estudios y el mundo de la tecnología con la finalidad de conectar
                             el sector hostelero con la tecnología.</p>
                         <div class="buttons">
-                            <button routerLink="projects-list">
-                                <span> Go to my LinkedIn
-                                </span>
-                            </button>
-                            <button class="ms-5">
-                                <span> Resume
-                                </span>
-                            </button>
+
+                            <a href="https://www.linkedin.com/in/jehiel-linarez/">
+                                <button>
+                                    <span> To my LinkedIn
+                                    </span>
+                                </button>
+                            </a>
+
+                            <a href="https://www.canva.com/design/DAFvyNgcYg8/pqBj8trI4DJlD6n_-Chi8Q/view?utm_content=DAFvyNgcYg8&utm_campaign=designshare&utm_medium=link&utm_source=editor">
+                                <button class="ms-5">
+                                    <span> Resume
+                                    </span>
+                                </button>
+                            </a>
+
+                           
                         </div>
 
                     </div>
@@ -79,8 +87,10 @@
                     <svg viewBox="0 0 24 24"
                         xmlns="https://i.ibb.co/jyWYGnM/Captura-de-pantalla-2024-04-30-155108.png"></svg>
                     <div class="card__content">
-                        <p class="card__title">Curso Landing page.</p>
-                        <p class="card__description mb-1">Realizado al principio del curso, su finalidad es simple, pero poderosa, conectar todos los proyectos al terminar el curso, todos los estudiantes de la fundación Adecco estan invitados a participar.</p>
+                        <p class="card__title">Curso landing page.</p>
+                        <p class="card__description mb-1">Realizado al principio del curso, su finalidad es simple, pero
+                            poderosa, conectar todos los proyectos al terminar el curso, todos los estudiantes de la
+                            fundación Adecco estan invitados a participar.</p>
                     </div>
                 </div>
             </a>
@@ -94,7 +104,7 @@
                     <svg viewBox="0 0 24 24"
                         xmlns="https://i.ibb.co/jyWYGnM/Captura-de-pantalla-2024-04-30-155108.png"></svg>
                     <div class="card__content">
-                        <p class="card__title">Antiguo Portfolio.</p>
+                        <p class="card__title">Antiguo portfolio.</p>
                         <p class="card__description">Te presento mi antiguo portfolio, realizado con HTML, Css y
                             Javascript, fue mi primer projecto dentro del desarrollo web, fue realizado de manera
                             empiríca, animado por un nuevo mundo que se habría paso.</p>
@@ -161,7 +171,7 @@
 
 
                 <p>Solidos conocimientos en desarrollo frontend, los ultimos 6 meses me he mantenido inmerson en el
-                    desarrollo de aplicaciones web fon el framework Angular y el motor de estilos Bootstrap, de la mano
+                    desarrollo de aplicaciones web con el framework Angular y el motor de estilos Bootstrap, de la mano
                     de <span>Certidevs</span> he logrado adquirir a profundidad los conocimientos necesarios para
                     desarrollarme en puestos de desarrollo UX/IX, Frontend.</p>
             </div>
@@ -209,7 +219,8 @@
                     Piscinas</a>, del prestigioso campus 42 de Fundación Telefonica, donde me encuentro desarrollando
                 habilidades en el lenguaje C, como lo son: algoritmos, creación de funciones, gestión de memoría, linux,
                 cyberseguridad y muchisimos otros excitantes proyectos, te recomiendo visitar mi ultimo proyecto
-                realizado en <strong>42.</strong></p>
+                realizado en <strong>42.</strong>
+            </p>
 
             <a href="https://github.com/JehielL/libft"><button class="btn btn-outline-dark">Visitar ultimo proyecto
                     realizado.</button></a>
@@ -218,7 +229,7 @@
             <img src="https://jobinplanet.com/media/83659" alt="" style="max-width: 380px;">
         </div>
     </div>
-    
+
     <hr class="featurette-divider">
 
     <div class="row featurette ">
@@ -231,7 +242,7 @@
                 contado con la participación de Alan sastre como instructor, el cual ha garantizado mediante su
                 plataforma, evaluado a traves de inteligencia artificial, que hemos completado satisfactoriamente la
                 formación que nos permite acceder al mundo laboral.</p>
-            <button class="btn btn-outline-dark">Conoce mis certificados aprobados.</button>
+            <button class="btn btn-outline-dark" routerLink="projects-list">Conoce mis certificados aprobados.</button>
 
         </div>
 
@@ -246,12 +257,26 @@
 
     <div class="row featurette">
         <div class="col-md-8">
-            <h2 class="featurette-heading fw-normal ">Futuros proyectos. <span class="text-body-secondary">Tech Chef.</span></h2>
-            <p class="lead">Apostando por el talento, mis creencias y afianzado en que el futuro es ahora, he decidido fundar 
+            <h2 class="featurette-heading fw-normal ">Futuros proyectos. <span class="text-body-secondary">Tech
+                    Chef.</span></h2>
+            <p class="lead">Apostando por el talento, mis creencias y afianzado en que el futuro es ahora, he decidido
+                fundar
                 <a href="https://www.42madrid.com/" style="text-decoration: none; font-weight: 600; color:black">
-                    Tech Chef</a>, junto a mi socia y esposa <a href="https://www.linkedin.com/in/maria-laura-asuaje-palmero-94a00380/" style="text-decoration: none; font-weight: 600;" class="text-gradient">Maria Laura Asuaje</a>, con el objetivo de avanzar el proceso de digitalización de la hostelería en España, realizando investigaciones y desarrolloes que lleven a una economía mas sostenible, apoyando y asesorando al pequeño comercio.</p>
+                    Tech Chef</a>, junto a mi socia y esposa <a
+                    href="https://www.linkedin.com/in/maria-laura-asuaje-palmero-94a00380/"
+                    style="text-decoration: none; font-weight: 600;" class="text-gradient">Maria Laura Asuaje</a>, con
+                el objetivo de avanzar el proceso de digitalización de la hostelería en España, realizando
+                investigaciones y desarrollos que lleven a una economía mas sostenible, apoyando y asesorando al
+                pequeño comercio.
+            </p>
 
-            <a href="https://github.com/JehielL/libft"><button class="btn btn-outline-danger">Desde aquí podras visitar nuestro blog.</button></a>
+            <div class="tooltip-container">
+                <span class="tooltip">Pronto podras conocer nuestras ideas en nuestro blog.</span>
+                <button class="btn btn-outline-danger text">Desde aquí podras visitar nuestro blog.</button>
+
+
+            </div>
+
         </div>
         <div class="col-md-4 " data-aos="fade-up">
             <img src="https://i.ibb.co/tKV9fKn/logo-tech2.png" alt="" style="max-width: 350px;">
