--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md bg-custom">
     <div class="container-fluid">
-      <a >
+      <a href="index.html">
         <img src="https://i.ibb.co/tKV9fKn/logo-tech2.png" alt="" style="max-width: 100px;">
       </a>
   
@@ -25,15 +25,15 @@
   
           <!-- Más elementos del menú de navegación aquí -->
   
-          <li class="nav-item" ngbDropdown>
+         <!--<li class="nav-item" ngbDropdown>
             <a class="nav-link" id="navbarDropdown2" role="button" ngbDropdownToggle>
-              <i class="nav-icon"></i> Sobre mí
+              <i class="nav-icon" style="color: #f3f3f3;"></i> Sobre mí
             </a>
             <div ngbDropdownMenu aria-labelledby="navbarDropdown2" class="dropdown-menu dropdown-menu-end">
-              <a ngbDropdownItem routerLink="user/list" (click)="$event.preventDefault()" routerLink="/about-us">Sobre nosotros.</a>
-              <a ngbDropdownItem href="#" (click)="$event.preventDefault()">Sobre el proyecto.</a>
+              <a ngbDropdownItem routerLink="user/list" (click)="$event.preventDefault()" routerLink="/about-us">Sobre mi vida como chef.</a>
+              <a ngbDropdownItem href="#" (click)="$event.preventDefault()">Futuros planes.</a>
             </div>
-          </li>
+          </li>--> 
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             
@@ -51,7 +51,7 @@
   
       
           
-        <a href="https://github.com/JehielL"><button type="button" class="btn btn-login"  > <i class="bi bi-github"></i>
+        <a href="https://github.com/JehielL"><button type="button" class="btn btn-login "  style="margin-right: 50px;"> <i class="bi bi-github"></i>
             
           My github</button></a>
           
