--- a/src/app/projects-list/projects-list.component.html
+++ b/src/app/projects-list/projects-list.component.html
@@ -2,9 +2,9 @@
 
     <div class="text-secondary text-center" style="background-color: transparent;" >
         <div class="py-5">
-            <h1 class="display-5 fw-bold text-gradient">Mis Certificados de Estudio</h1>
+            <h1 class="display-5 fw-bold text-gradient">Mis certificados de estudio.</h1>
             <div class="col-lg-3 mx-auto">
-                <p class="fs-5 mb-4">En esta sección podras hacer un mapeo temporal de mi recorrido como estudiante, desde certificados ordenados en orden cronologico, podras observas mas detalladamente mis skills, habilidades y los cursos que he completado </p>
+                <p class="fs-5 mb-4">En esta sección podras hacer un mapeo temporal de mi recorrido como estudiante, desde certificados ordenados en orden cronologico, podras observar mas detalladamente mis skills, habilidades y los cursos que he completado </p>
                 <div class="d-grid  justify-content-sm-center">
                     <button type="button" class="btn btn-outline-info btn-lg   fw-bold">Volver al inicio</button>
                 </div>
@@ -28,7 +28,7 @@
             </div>
             <ul class="list-group list-group-light list-group-small">
                 <li class="list-group-item px-4"><strong>Horas: </strong>30</li>
-                <li class="list-group-item px-4"><strong>Nota final:</strong> 10/10</li>
+                <li class="list-group-item px-4"><strong>Nota final:</strong> 8/10</li>
             </ul>
 
         </div>
@@ -56,7 +56,7 @@
             </div>
             <ul class="list-group list-group-light list-group-small">
                 <li class="list-group-item px-4"><strong>Horas: </strong>30</li>
-                <li class="list-group-item px-4"><strong>Nota final:</strong> 10/10</li>
+                <li class="list-group-item px-4"><strong>Nota final:</strong> 8/10</li>
             </ul>
 
         </div>
