actualizado path angular.json

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,12 +11,12 @@
                         <div class="typewriter">
                             <h1>¡Hola! Bienvenido, soy:</h1>
                         </div>
-                        <h2 data-aos="zoom-out">
+                        <h2 >
                             <<span class="text-gradient">Jehiel
                                 Linarez</span>/>
                         </h2>
                         <h3>Desarrollador web</h3>
-                        <p data-aos="fade-up" data-aos-delay="200">Me dedico al desarrollo de aplicaciones web, en este
+                        <p >Me dedico al desarrollo de aplicaciones web, en este
                             portfolio podrás encontrar de manera mas detallada, mis proyectos, estudios, futuros
                             emprendimientos y probablemente encontraras mas de una manera de comunciarte conmigo, me
                             encuentro sumergido en mis estudios y el mundo de la tecnología con la finalidad de conectar
@@ -44,7 +44,7 @@
 
                     <div class="col-lg-5">
                         <img src="https://media.licdn.com/dms/image/D4D03AQHzgbxlBXh0mw/profile-displayphoto-shrink_800_800/0/1712954050224?e=1720051200&v=beta&t=5DgHK696p0V1MAirQ2g47-SKBfX5zCltGX8b1ffSouQ"
-                            class="img-fluid custom-photo" alt="" data-aos="zoom-out" data-aos-delay="300">
+                            class="img-fluid custom-photo" alt="" >
                     </div>
 
 
@@ -65,7 +65,7 @@
         <h1 class="text-center mb-5 roboto-medium-italic mt-5">Conoce mis proyectos.</h1>
         <div class="col">
             <a href="https://bitebooking-frontend-oqb5.vercel.app/home-logout">
-                <div class="card" data-aos="fade-up"
+                <div class="card" 
                     style="background-image: url('https://i.ibb.co/d2mNPpP/Captura-de-pantalla-2024-04-28-111137.png');">
                     <svg viewBox="0 0 24 24"
                         xmlns="https://i.ibb.co/d2mNPpP/Captura-de-pantalla-2024-04-28-111137.png"></svg>
@@ -82,7 +82,7 @@
         </div>
         <div class="col">
             <a href="https://jehiell.github.io/landing-page-curso/">
-                <div class="card " data-aos="fade-up"
+                <div class="card " 
                     style="background-image: url('https://i.ibb.co/jyWYGnM/Captura-de-pantalla-2024-04-30-155108.png');">
                     <svg viewBox="0 0 24 24"
                         xmlns="https://i.ibb.co/jyWYGnM/Captura-de-pantalla-2024-04-30-155108.png"></svg>
@@ -100,7 +100,7 @@
             <a href="https://jehiell.github.io/">
                 <div class="card"
                     style="background-image: url('https://i.ibb.co/fFPNtxy/Captura-de-pantalla-2024-04-30-171615.png');"
-                    data-aos="fade-up">
+                    >
                     <svg viewBox="0 0 24 24"
                         xmlns="https://i.ibb.co/jyWYGnM/Captura-de-pantalla-2024-04-30-155108.png"></svg>
                     <div class="card__content">
@@ -159,7 +159,7 @@
 
 
 
-<div data-aos="fade-up" class="counts container">
+<div  class="counts container">
     <div class="horizontal-bars mt-5"></div>
     <h1 class="text-center  roboto-medium-italic mt-5">Habilidades, estudios & futuros proyectos.</h1>
     <div class="row text-center  justify-content-center">
@@ -225,7 +225,7 @@
             <a href="https://github.com/JehielL/libft"><button class="btn btn-outline-dark">Visitar ultimo proyecto
                     realizado.</button></a>
         </div>
-        <div class="col-md-4 mt-5" data-aos="fade-up">
+        <div class="col-md-4 mt-5">
             <img src="https://jobinplanet.com/media/83659" alt="" style="max-width: 380px;">
         </div>
     </div>
@@ -246,7 +246,7 @@
 
         </div>
 
-        <div class="col-md-6 order-md-1 justify-content-center align-items-center " data-aos="fade-up">
+        <div class="col-md-6 order-md-1 justify-content-center align-items-center " >
             <img src="https://i.ibb.co/RyPf8fF/certidevs-portada-formacion-removebg-preview.png" alt=""
                 style="max-width: 200px;">
             <img src="https://fundacionadecco.org/wp-content/uploads/2017/05/logo-fundacion-adecco-discapacidad.png"
@@ -278,7 +278,7 @@
             </div>
 
         </div>
-        <div class="col-md-4 " data-aos="fade-up">
+        <div class="col-md-4 " >
             <img src="https://i.ibb.co/tKV9fKn/logo-tech2.png" alt="" style="max-width: 350px;">
         </div>
     </div>
@@ -286,7 +286,7 @@
 </div>
 
 
-<section id="contacto" data-aos-duration="2000">
+<section id="contacto" >
     <div class="form-container">
         <div class="form">
 
