--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -225,8 +225,8 @@
             <a href="https://github.com/JehielL/libft"><button class="btn btn-outline-dark">Visitar ultimo proyecto
                     realizado.</button></a>
         </div>
-        <div class="col-md-4 mt-5">
-            <img src="https://jobinplanet.com/media/83659" alt="" style="max-width: 380px;">
+        <div class="custom-icon col-md-3 mt-5">
+            <img src="https://jobinplanet.com/media/83659" alt="" style="max-width: 300px;">
         </div>
     </div>
 
