--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,12 +11,12 @@
                         <div class="typewriter">
                             <h1>¡Hola! Bienvenido, soy:</h1>
                         </div>
-                        <h2 >
+                        <h2>
                             <<span class="text-gradient">Jehiel
                                 Linarez</span>/>
                         </h2>
                         <h3>Desarrollador web</h3>
-                        <p >Me dedico al desarrollo de aplicaciones web, en este
+                        <p>Me dedico al desarrollo de aplicaciones web, en este
                             portfolio podrás encontrar de manera mas detallada, mis proyectos, estudios, futuros
                             emprendimientos y probablemente encontraras mas de una manera de comunciarte conmigo, me
                             encuentro sumergido en mis estudios y el mundo de la tecnología con la finalidad de conectar
@@ -30,21 +30,22 @@
                                 </button>
                             </a>
 
-                            <a href="https://www.canva.com/design/DAFvyNgcYg8/pqBj8trI4DJlD6n_-Chi8Q/view?utm_content=DAFvyNgcYg8&utm_campaign=designshare&utm_medium=link&utm_source=editor">
+                            <a
+                                href="https://www.canva.com/design/DAFvyNgcYg8/pqBj8trI4DJlD6n_-Chi8Q/view?utm_content=DAFvyNgcYg8&utm_campaign=designshare&utm_medium=link&utm_source=editor">
                                 <button class="ms-5">
                                     <span> Resume
                                     </span>
                                 </button>
                             </a>
 
-                           
+
                         </div>
 
                     </div>
 
                     <div class="col-lg-5">
                         <img src="https://media.licdn.com/dms/image/D4D03AQHzgbxlBXh0mw/profile-displayphoto-shrink_800_800/0/1712954050224?e=1720051200&v=beta&t=5DgHK696p0V1MAirQ2g47-SKBfX5zCltGX8b1ffSouQ"
-                            class="img-fluid custom-photo" alt="" >
+                            class="img-fluid custom-photo" alt="">
                     </div>
 
 
@@ -65,7 +66,7 @@
         <h1 class="text-center mb-5 roboto-medium-italic mt-5">Conoce mis proyectos.</h1>
         <div class="col">
             <a href="https://bitebooking-frontend-oqb5.vercel.app/home-logout">
-                <div class="card" 
+                <div class="card"
                     style="background-image: url('https://i.ibb.co/d2mNPpP/Captura-de-pantalla-2024-04-28-111137.png');">
                     <svg viewBox="0 0 24 24"
                         xmlns="https://i.ibb.co/d2mNPpP/Captura-de-pantalla-2024-04-28-111137.png"></svg>
@@ -82,7 +83,7 @@
         </div>
         <div class="col">
             <a href="https://jehiell.github.io/landing-page-curso/">
-                <div class="card " 
+                <div class="card "
                     style="background-image: url('https://i.ibb.co/jyWYGnM/Captura-de-pantalla-2024-04-30-155108.png');">
                     <svg viewBox="0 0 24 24"
                         xmlns="https://i.ibb.co/jyWYGnM/Captura-de-pantalla-2024-04-30-155108.png"></svg>
@@ -99,8 +100,7 @@
         <div class="col">
             <a href="https://jehiell.github.io/">
                 <div class="card"
-                    style="background-image: url('https://i.ibb.co/fFPNtxy/Captura-de-pantalla-2024-04-30-171615.png');"
-                    >
+                    style="background-image: url('https://i.ibb.co/fFPNtxy/Captura-de-pantalla-2024-04-30-171615.png');">
                     <svg viewBox="0 0 24 24"
                         xmlns="https://i.ibb.co/jyWYGnM/Captura-de-pantalla-2024-04-30-155108.png"></svg>
                     <div class="card__content">
@@ -120,35 +120,56 @@
 <div class="slider">
 
     <div class="slide-track">
-        <div class="slide">
-            <img src="https://avatars1.githubusercontent.com/u/139426?s=280&v=4" alt="">
+        <a href="https://github.com/JehielL/bitebooking-frontend">
+            <div class="slide">
+                <img src="https://avatars1.githubusercontent.com/u/139426?s=280&v=4" alt="">
 
-        </div>
-        <div class="slide">
-            <img src="https://www.vectorlogo.zone/logos/java/java-icon.svg" alt="">
+            </div>
+        </a>
 
-        </div>
-        <div class="slide">
-            <img src="https://cdn.worldvectorlogo.com/logos/spring-3.svg" alt="">
+        <a href="https://github.com/JehielL/oop-java-adecco">
+            <div class="slide">
+                <img src="https://www.vectorlogo.zone/logos/java/java-icon.svg" alt="">
 
-        </div>
-        <div class="slide">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cf/Python_logo_51.svg/1200px-Python_logo_51.svg.png"
-                alt="">
+            </div>
+        </a>
 
-        </div>
-        <div class="slide">
-            <img src="https://www.vectorlogo.zone/logos/mysql/mysql-official.svg" alt="">
+        <a href="https://github.com/JehielL/java-spring">
+            <div class="slide">
+                <img src="https://cdn.worldvectorlogo.com/logos/spring-3.svg" alt="">
 
-        </div>
+            </div>
+        </a>
+
+        <a href="https://github.com/JehielL/curso-java/tree/main/Python">
+
+            <div class="slide">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cf/Python_logo_51.svg/1200px-Python_logo_51.svg.png"
+                    alt="">
+
+            </div>
+
+        </a>
+        <a href="https://github.com/JehielL/curso-java/tree/main/SQL">
+            <div class="slide">
+                <img src="https://www.vectorlogo.zone/logos/mysql/mysql-official.svg" alt="">
+
+            </div>
+
+        </a>
+
         <div class="slide">
             <img src="https://getbootstrap.com/docs/5.3/assets/brand/bootstrap-logo-shadow.png" alt="">
 
         </div>
-        <div class="slide">
-            <img src="https://icons.veryicon.com/png/o/business/vscode-program-item-icon/typescript-def.png" alt="">
 
-        </div>
+        <a href="https://github.com/JehielL/bitebooking-frontend">
+            <div class="slide">
+                <img src="https://icons.veryicon.com/png/o/business/vscode-program-item-icon/typescript-def.png" alt="">
+
+            </div>
+        </a>
+
         <div class="slide">
             <img src="https://static-00.iconduck.com/assets.00/postman-icon-2048x2048-dsydvxav.png" alt="">
 
@@ -159,7 +180,7 @@
 
 
 
-<div  class="counts container">
+<div class="counts container">
     <div class="horizontal-bars mt-5"></div>
     <h1 class="text-center  roboto-medium-italic mt-5">Habilidades, estudios & futuros proyectos.</h1>
     <div class="row text-center  justify-content-center">
@@ -246,7 +267,7 @@
 
         </div>
 
-        <div class="col-md-6 order-md-1 justify-content-center align-items-center " >
+        <div class="col-md-6 order-md-1 justify-content-center align-items-center ">
             <img src="https://i.ibb.co/RyPf8fF/certidevs-portada-formacion-removebg-preview.png" alt=""
                 style="max-width: 200px;">
             <img src="https://fundacionadecco.org/wp-content/uploads/2017/05/logo-fundacion-adecco-discapacidad.png"
@@ -278,7 +299,7 @@
             </div>
 
         </div>
-        <div class="col-md-4 " >
+        <div class="col-md-4 ">
             <img src="https://i.ibb.co/tKV9fKn/logo-tech2.png" alt="" style="max-width: 350px;">
         </div>
     </div>
@@ -286,7 +307,7 @@
 </div>
 
 
-<section id="contacto" >
+<section id="contacto">
     <div class="form-container">
         <div class="form">
 
