--- a/src/app/projects-list/projects-list.component.html
+++ b/src/app/projects-list/projects-list.component.html
@@ -6,7 +6,8 @@
             <div class="col-lg-3 mx-auto">
                 <p class="fs-5 mb-4">En esta sección podras hacer un mapeo temporal de mi recorrido como estudiante, desde certificados ordenados en orden cronologico, podras observar mas detalladamente mis skills, habilidades y los cursos que he completado </p>
                 <div class="d-grid  justify-content-sm-center">
-                    <button type="button" class="btn btn-outline-info btn-lg   fw-bold">Volver al inicio</button>
+                    <a href="/index.html"><button type="button" class="btn btn-outline-info btn-lg   fw-bold">Volver al inicio</button></a>
+                    
                 </div>
             </div>
         </div>
