--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -197,3 +197,10 @@
     border-radius: 50%;
     max-width: 30px;
   }
+
+  .navbar-toggler {
+    background-color: #61f7ffab !important;
+    border-color: transparent !important; 
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
+    opacity: 0.9;
+}
