--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,9 +7,9 @@
       <div class="loader">
         <div data-glitch="" class="glitch"> </div>
      </div>
-      <button class="navbar-toggler" type="button" aria-controls="navbarContent" [attr.aria-expanded]="!collapsed"
+      <button class="navbar-toggler text-white" type="button" aria-controls="navbarContent" [attr.aria-expanded]="!collapsed"
         aria-label="Toggle navigation" (click)="collapsed = !collapsed">
-        <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon text-white "></span>
       </button>
   
       <div class="navbar-collapse" [class.collapse]="collapsed" id="navbarContent">
