--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -247,7 +247,7 @@
                     realizado.</button></a>
         </div>
         <div class="custom-icon col-md-3 mt-5">
-            <img src="https://jobinplanet.com/media/83659" alt="" style="max-width: 300px;">
+            <img class="custom-img" src="https://jobinplanet.com/media/83659" alt="" style="max-width: 300px;">
         </div>
     </div>
 
@@ -268,9 +268,9 @@
         </div>
 
         <div class="col-md-6 order-md-1 justify-content-center align-items-center ">
-            <img src="https://i.ibb.co/RyPf8fF/certidevs-portada-formacion-removebg-preview.png" alt=""
+            <img class="custom-img" src="https://i.ibb.co/RyPf8fF/certidevs-portada-formacion-removebg-preview.png" alt=""
                 style="max-width: 200px;">
-            <img src="https://fundacionadecco.org/wp-content/uploads/2017/05/logo-fundacion-adecco-discapacidad.png"
+            <img class="custom-img" src="https://fundacionadecco.org/wp-content/uploads/2017/05/logo-fundacion-adecco-discapacidad.png"
                 alt="" style="max-width: 200px;">
         </div>
     </div>
@@ -300,7 +300,7 @@
 
         </div>
         <div class="col-md-4 ">
-            <img src="https://i.ibb.co/tKV9fKn/logo-tech2.png" alt="" style="max-width: 350px;">
+            <img class="custom-img" src="https://i.ibb.co/tKV9fKn/logo-tech2.png" alt="" style="max-width: 350px;">
         </div>
     </div>
 
