--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -139,6 +139,13 @@
     margin-left: 10%;
   
   }
+  .custom-img{
+
+    max-width: 200px !important;
+    align-items: center;
+    margin-left: 20%;
+    margin-top: 2rem;
+  }
   
 }
 
