--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
 
     <!-- Contenido de tu página aquí -->
     <div class="row ">
-        <section id="hero" class="d-flex align-items-center image-bg py-1">
+        <section id="hero" class="d-flex align-items-center image-bg py-1 parallax">
             <div class="container custom-row">
                 <div class="row justify-content-between ">
                     <div
