--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -11,11 +11,11 @@
             <h5>Sección</h5>
             <ul class="nav flex-column">
                 <li class="nav-item mb-2"><a href="/index.html" class="nav-link p-0 text-body-secondary">Inicio</a></li>
-                <li class="nav-item mb-2"><a href="#" routerLink="projects-list"
+                <li class="nav-item mb-2"><a href="projects-list" routerLink="projects-list"
                         class="nav-link p-0 text-body-secondary">Cursos realizados</a></li>
                 <li class="nav-item mb-2"><a href="#contacto" 
                         class="nav-link p-0 text-body-secondary">Contactame</a></li>
-                <li class="nav-item mb-2"><a href="#" routerLink="/platos"
+                <li class="nav-item mb-2"><a href="https://www.awwwards.com/inspiration_search/"
                         class="nav-link p-0 text-body-secondary">Encuentra inspiración</a></li>
             </ul>
         </div>
