--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -181,7 +181,7 @@
 
 
 <div class="counts container">
-    <div class="horizontal-bars mt-5"></div>
+    <div class="horizontal-bars"></div>
     <h1 class="text-center  roboto-medium-italic mt-5">Habilidades, estudios & futuros proyectos.</h1>
     <div class="row text-center  justify-content-center">
 
