Agregado component blog-tech, refactor home, footer, urls .

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -268,10 +268,15 @@
         </div>
 
         <div class="col-md-6 order-md-1 justify-content-center align-items-center ">
-            <img class="custom-img" src="https://i.ibb.co/RyPf8fF/certidevs-portada-formacion-removebg-preview.png" alt=""
+            <a href="https://certidevs.com/">
+                <img class="custom-img" src="https://i.ibb.co/RyPf8fF/certidevs-portada-formacion-removebg-preview.png" alt=""
                 style="max-width: 200px;">
-            <img class="custom-img" src="https://fundacionadecco.org/wp-content/uploads/2017/05/logo-fundacion-adecco-discapacidad.png"
+            </a>
+            <a href="https://www.canva.com/design/DAGECCz67b8/w1WmONl7eaku0hkMvuwixg/view?utm_content=DAGECCz67b8&utm_campaign=designshare&utm_medium=link&utm_source=editor">
+                <img class="custom-img" src="https://fundacionadecco.org/wp-content/uploads/2017/05/logo-fundacion-adecco-discapacidad.png"
                 alt="" style="max-width: 200px;">
+            </a>
+            
         </div>
     </div>
     <hr class="featurette-divider">
@@ -293,14 +298,14 @@
 
             <div class="tooltip-container">
                 <span class="tooltip">Pronto podras conocer nuestras ideas en nuestro blog.</span>
-                <button class="btn btn-outline-danger text">Desde aquí podras visitar nuestro blog.</button>
+                <button class="btn btn-outline-danger text">Aquí podras visitar nuestro blog.</button>
 
 
             </div>
 
         </div>
         <div class="col-md-4 ">
-            <img class="custom-img" src="https://i.ibb.co/tKV9fKn/logo-tech2.png" alt="" style="max-width: 350px;">
+            <img class="custom-img rotating-image" src="https://i.ibb.co/tKV9fKn/logo-tech2.png" alt="" style="max-width: 350px;">
         </div>
     </div>
 
