--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -32,6 +32,7 @@
                     <button class="btn btn-outline-light" type="button">Subscribe</button>
                 </div>
             </form>
+            
         </div>
 
         <div class="col text-center">
@@ -52,6 +53,11 @@
                     </a>
                 </li>
             </ul>
+        </div>
+    </div>
+    <div class="row justify-content-center">
+        <div class="col-12 col-md-6 text-center ">
+            <small>&copy; 2024 Jehiel Linarez. Puede ser que algunos derechos esten reservados.</small>
         </div>
     </div>
 </footer>
