--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -608,3 +608,33 @@ body {
   max-width: 99.5vw;
  
 }
+
+@keyframes rotate-clockwise {
+  0% {
+    transform: rotate(0deg);
+  }
+  50% {
+    transform: rotate(15deg); 
+  }
+  100% {
+    transform: rotate(0deg); 
+  }
+}
+
+@keyframes rotate-counter-clockwise {
+  0% {
+    transform: rotate(0deg);
+  }
+  50% {
+    transform: rotate(-15deg); 
+  }
+  100% {
+    transform: rotate(0deg); 
+  }
+}
+
+.rotating-image {
+  transition: transform 1s ease;
+  animation: rotate-clockwise 10s linear infinite alternate;
+  border-radius: 50%;
+}
