--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -19,7 +19,7 @@
 
         <li class="nav-item" ngbDropdown>
           <a class="nav-link" id="navbarDropdown2" role="button" ngbDropdownToggle>
-            <i class="nav-icon" style="color: #f3f3f3;"></i> Blog
+            <i class="nav-icon text-white" style="color: #f3f3f3;"></i> Blog
           </a>
           <div ngbDropdownMenu aria-labelledby="navbarDropdown2" class="dropdown-menu dropdown-menu-end">
             <a ngbDropdownItem  routerLink="blog-tech">Sobre
