--- a/src/styles.css
+++ b/src/styles.css
@@ -10,3 +10,20 @@ body {
     background-size: 20px 20px; /* Volver al tamaño original de los puntos */
     background-position: 0 0, 5px 5px; /* Ajustar la posición de los puntos según el nuevo tamaño */
 }
+
+.text-gradient {
+    background: linear-gradient(to right, #00ffdd, #cf74c0);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-weight: 400;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+
+  .horizontal-bars {
+    width: 100%;
+    height: 3px;
+    background: linear-gradient(to right, #00ffdd, #cf74c0);
+    /* Degradado de blanco a gris a blanco */
+    margin-bottom: 1rem;
+  }
